@@ -39,7 +39,8 @@ public class ArrayDequeTest {
                 //System.out.println("result_size: " + size2);
                 assertEquals("Should have the same size", size1, size2);
 
-            } else if (operationNumber == 1 && result.size() != 8) {
+            } else if (operationNumber == 1) {
+                // && result.size() != 8
                 // addLast
                 int randVal = StdRandom.uniform(0, 100);
                 reference.addLast(randVal);
@@ -48,11 +49,12 @@ public class ArrayDequeTest {
 
             } else if (operationNumber == 2 && reference.size() != 0 && result.size() != 0){
                 // getLast
-                int last1 = reference.get(reference.size() - 1);
+                int last1 = reference.getLast();
                 int last2 = result.getLast();
                 //System.out.println("reference_Last item: " + last1);
                 //System.out.println("result_Last item: " + last2);
                 assertEquals("Should have the same last item", last1, last2);
+                //assertEquals("Should have the same last item", reference.getLast(), result.getLast());
 
             } else if (operationNumber == 3 && reference.size() != 0 && result.size() != 0){
                 // remove Last
@@ -61,27 +63,36 @@ public class ArrayDequeTest {
                 //System.out.println("reference Last item removed: " + remove_last_1);
                 //System.out.println("result Last item removed: " + remove_last_2);
                 assertEquals("Should remove the same last item", remove_last_1, remove_last_2);
-            } else if (operationNumber == 4 && result.size() != 8){
+                //assertEquals("Should remove the same last item", reference.removeLast(), result.removeLast());
+
+            } else if (operationNumber == 4){
+                //&& result.size() != 8
                 //addFirst
                 int randVal = StdRandom.uniform(0, 100);
                 reference.addFirst(randVal);
                 result.addFirst(randVal);
+
             } else if (operationNumber == 5 && reference.size() != 0 && result.size() != 0){
                 //getFirst
-                int first1 = reference.get(0);
+                int first1 = reference.getFirst();
                 int first2 = result.getFirst();
                 assertEquals("Should have the same first item", first1, first2);
+                //assertEquals("Should have the same first item", reference.getFirst(), result.getFirst());
+
             } else if (operationNumber == 6 && reference.size() != 0 && result.size() != 0){
                 //removeFirst
                 int remove_first_1 = reference.removeFirst();
                 int remove_first_2 = result.removeFirst();
                 assertEquals("Should remove the same first item", remove_first_1, remove_first_2);
+                //assertEquals("Should remove the same first item", reference.removeFirst(), result.removeFirst());
+
             } else if (operationNumber == 7 && reference.size() != 0 && result.size() != 0){
                 //get(i)
                 int randVal = StdRandom.uniform(0, 100);
                 int ith1 = reference.get(randVal);
                 int ith2 = result.get(randVal);
                 assertEquals("Should have the same i-th item", ith1, ith2);
+                //assertEquals("Should have the same i-th item", reference.get(randVal), result.get(randVal));
             }
         }
     }
